[gd_scene load_steps=4 format=3 uid="uid://c7k3fndqbtpcw"]

[ext_resource type="Script" path="res://src/game_overlay.gd" id="1_kxllj"]
[ext_resource type="PackedScene" uid="uid://dnhnrabrf57os" path="res://assets/scenes/hotbar.tscn" id="2_2csbp"]
[ext_resource type="SystemFont" uid="uid://be14qyvbd8lox" path="res://assets/fonts/system_font.tres" id="3_s1v7d"]

[node name="GameOverlay" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_kxllj")

[node name="ItemHotbar" parent="." instance=ExtResource("2_2csbp")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 694.0
offset_bottom = 82.0
mouse_filter = 2

[node name="InteractLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = 40.0
offset_right = 30.5
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_s1v7d")
text = "Interact"
horizontal_alignment = 1
vertical_alignment = 1
